Update frontend expense datamodel to match changes from backend + Show correct category icon on mobile expenses page + Change color of many prices thoughout application

--- a/app/mikane/src/app/pages/expenditures/expenditures.component.scss
+++ b/app/mikane/src/app/pages/expenditures/expenditures.component.scss
@@ -2,12 +2,6 @@
   padding: 0;
 }
 
-.category-amount {
-  margin-right: 1.5em;
-  // color: rgb(172 255 163);
-  color: rgb(255 133 181);
-}
-
 .add-expense-button-mobile {
   position: fixed;
   bottom: 50px;
